# k16

./: .gitignore  LICENSE  README.md  codeBase.md  config.yaml  create_flat_tree.sh  install.sh  pyproject.toml  requirements.txt  search.sh  setup.py  test.sh  test_fast.sh
experiment/: flat_tree.py  test_flat.py  tree_converter.py
k16/: __init__.py  cli.py
k16/builder/: __init__.py  builder.py  clustering.py
k16/core/: __init__.py  flat_tree.py  tree.py
k16/io/: __init__.py  reader.py  writer.py
k16/search/: __init__.py  searcher.py
k16/utils/: __init__.py  cli_api.py  cli_build.py  cli_get_data.py  cli_search.py  cli_test.py  config.py  optimization.py
lib/: __init__.py  clustering.py  config.py  flat_tree.py  io.py  optimize_indices.py  search.py  tree.py
src/: analyze_tree.py  build_tree.py  optimize_params.py  prepareData.py  streamlit_search.py  test.py  visualize_optimization.py
tests/: test_cli_search.py  test_refactored.py
